--- a/package.json
+++ b/package.json
@@ -12,8 +12,8 @@
   "dependencies": {
     "body-parser": "^1.18.3",
     "express": "^4.16.3",
+    "isomorphic-unfetch": "^2.0.0",
     "next": "^4.2.0",
-    "node-fetch": "^2.1.2",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "uuid": "^3.2.1"
