--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "dev": "nodemon server.js",
     "build": "next build",
-    "start": "npm run build && NODE_ENV=production node server.js"
+    "start": "npm run build && node server.js"
   },
   "keywords": [],
   "author": "",
@@ -22,5 +22,8 @@
   },
   "devDependencies": {
     "nodemon": "^1.17.5"
+  },
+  "engines": {
+    "node": "10.4.1"
   }
 }
