--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "dev": "nodemon server.js",
     "build": "next build",
-    "start": "npm run build && node server.js"
+    "start": "npm run build && cross-env NODE_ENV=production PORT=3030 node server.js"
   },
   "keywords": [],
   "author": "",
@@ -21,6 +21,7 @@
     "uuid": "^3.2.1"
   },
   "devDependencies": {
+    "cross-env": "^5.2.0",
     "nodemon": "^1.17.5"
   },
   "engines": {
