--- a/package.json
+++ b/package.json
@@ -13,16 +13,16 @@
   "dependencies": {
     "body-parser": "^1.18.3",
     "cross-env": "^5.2.0",
-    "express": "^4.16.3",
-    "isomorphic-unfetch": "^2.0.0",
-    "next": "^6.1.1",
-    "react": "^16.2.0",
-    "react-dom": "^16.2.0",
-    "react-json-pretty": "^1.7.6",
-    "uuid": "^3.2.1"
+    "express": "^4.16.4",
+    "isomorphic-unfetch": "^2.1.1",
+    "next": "^7.0.2",
+    "react": "^16.6.3",
+    "react-dom": "^16.6.3",
+    "react-json-view": "^1.19.1",
+    "uuid": "^3.3.2"
   },
   "devDependencies": {
-    "nodemon": "^1.17.5"
+    "nodemon": "^1.18.8"
   },
   "engines": {
     "node": "10.4.1"
