--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "body-parser": "^1.18.3",
     "cross-env": "^5.2.0",
     "express": "^4.16.4",
+    "express-http-proxy": "^1.5.0",
     "isomorphic-unfetch": "^2.1.1",
     "next": "^7.0.2",
     "react": "^16.6.3",
