--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "express-http-proxy": "^1.5.0",
     "isomorphic-unfetch": "^2.1.1",
     "next": "^7.0.2",
+    "prettier": "^1.16.0",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
     "react-json-editor-ajrm": "^2.5.9",
