--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.18.3",
+    "classnames": "^2.2.6",
     "cross-env": "^5.2.0",
     "express": "^4.16.4",
     "express-http-proxy": "^1.5.0",
