--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.18.3",
+    "brace": "^0.11.1",
     "classnames": "^2.2.6",
     "cross-env": "^5.2.0",
     "express": "^4.16.4",
@@ -20,6 +21,7 @@
     "next": "^7.0.2",
     "prettier": "^1.16.0",
     "react": "^16.6.3",
+    "react-ace": "^6.3.2",
     "react-dom": "^16.6.3",
     "react-json-editor-ajrm": "^2.5.9",
     "react-split-pane": "^2.0.2",
