--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "express": "^4.16.4",
     "express-http-proxy": "^1.5.0",
     "isomorphic-unfetch": "^2.1.1",
+    "lodash": "^4.17.11",
     "next": "^7.0.2",
     "prettier": "^1.16.0",
     "react": "^16.6.3",
