--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@zeit/next-css": "^1.0.1",
     "body-parser": "^1.18.3",
     "brace": "^0.11.1",
     "classnames": "^2.2.6",
@@ -25,6 +26,7 @@
     "react-ace": "^6.3.2",
     "react-dom": "^16.6.3",
     "react-split-pane": "^2.0.2",
+    "react-table": "^6.8.6",
     "uuid": "^3.3.2"
   },
   "devDependencies": {
