--- a/package.json
+++ b/package.json
@@ -24,9 +24,9 @@
     "prettier": "^1.16.0",
     "react": "^16.6.3",
     "react-ace": "^6.3.2",
+    "react-contenteditable": "^3.2.6",
     "react-dom": "^16.6.3",
     "react-split-pane": "^2.0.2",
-    "react-table": "^6.8.6",
     "uuid": "^3.3.2"
   },
   "devDependencies": {
