--- a/package.json
+++ b/package.json
@@ -21,16 +21,15 @@
     "isomorphic-unfetch": "^2.1.1",
     "lodash": "^4.17.11",
     "next": "^7.0.2",
-    "prettier": "^1.16.0",
     "react": "^16.6.3",
     "react-ace": "^6.3.2",
     "react-contenteditable": "^3.2.6",
     "react-dom": "^16.6.3",
-    "react-split-pane": "^2.0.2",
-    "uuid": "^3.3.2"
+    "react-split-pane": "^2.0.2"
   },
   "devDependencies": {
-    "nodemon": "^1.18.8"
+    "nodemon": "^1.18.8",
+    "prettier": "^1.16.3"
   },
   "engines": {
     "node": "10.4.1"
