--- a/package.json
+++ b/package.json
@@ -24,8 +24,7 @@
     "react": "^16.8.1",
     "react-ace": "^6.4.0",
     "react-contenteditable": "^3.2.6",
-    "react-dom": "^16.8.1",
-    "react-split-pane": "^2.0.2"
+    "react-dom": "^16.8.1"
   },
   "devDependencies": {
     "nodemon": "^1.18.10",
